# starling-rs

./: .clog.toml  .editorconfig  .rustfmt.toml  Cargo.toml  README.md  build.rs  starling-api.yaml
.github/workflows/: ci.yml  stale.yml
src/: lib.rs
src/api/: auth.rs  client.rs  credentials.rs  mod.rs
src/models/: mod.rs
src/models/accounts/: account.rs  account_holder.rs  mod.rs
src/models/auth/: mod.rs
src/models/common/: amount.rs  currency_and_amount.rs  mod.rs  transaction.rs
src/models/enums/: account_currencies.rs  account_enums.rs  authentication_types.rs  endpoints.rs  mod.rs
src/models/errors/: error_detail.rs  error_response.rs  mod.rs
src/models/feed/: transaction.rs
starling-rs-openapi/: Cargo.toml
starling-rs-openapi/.openapi-generator/: FILES
starling-rs-openapi/src/models/: accepted_terms.rs  accepted_terms_request.rs  access_token.rs  account_holder.rs  account_holder_creation_request.rs  account_holder_creation_response.rs  account_holder_name.rs  account_identifier.rs  account_identifiers.rs  account_statement_period.rs  account_statement_periods.rs  account_v2.rs  accounts.rs  address_request.rs  address_update_request.rs  address_v2.rs  addresses_v2.rs  associated_feed_round_up.rs  balance_v2.rs  batch_payment_details.rs  business.rs  card.rs  cards.rs  change_address_request.rs  change_email_request.rs  change_mobile_phone_number_request.rs  confirm_image_upload_request.rs  confirm_upload_request.rs  confirm_upload_request_content_type.rs  confirm_video_upload_request.rs  confirmation_of_funds_response.rs  create_or_update_savings_goal_response_v2.rs  create_person_name_change_request.rs  create_person_request.rs  create_standing_order_request.rs  create_standing_order_response.rs  currency_and_amount.rs  currency_flag.rs  defunding_payment_recipient_request.rs  defunding_payment_request.rs  (+136 more)
