[package]
name = "starling-rs"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
keywords = ["api", "starling-bank", "banking"]
description = "Rust library for Starling Bank's API"
license = "Apache-2.0 or MIT"
readme = "README.md"
categories = ["api-bindings", "banking"]
repository = "https://github.com/shymega/starling-rs"

[lib]
name = "starling_rs"
path = "src/lib.rs"

[dependencies]
serde = "1.0.124"
serde_json = "1.0.64"
serde_derive = "1.0.124"
bigdecimal = "0.2.0"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.8.2"

[dependencies.reqwest]
version = "0.11.2"
features = ["json", "blocking"]
