[package]
name = "starling-rs"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
keywords = ["api", "starling-bank", "banking"]
description = "Rust library for Starling Bank's API"
license = "Apache-2.0 or MIT"
readme = "README.md"
categories = ["api-bindings", "banking"]
repository = "https://github.com/shymega/starling-rs"

[lib]
name = "starling_rs"
path = "src/lib.rs"

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
bigdecimal = "0.3.0"
chrono = "0.4.19"

[dependencies.uuid]
features = ["v4", "serde"]
version = "1.0.0"

[dependencies.attohttpc]
version = "0.19.1"
features = ["json"]
