[package]
name = "starling-rs-openapi"
version = "1.0.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
publish = false

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
